[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord_android"
version = "1.1.1"
description = "A Discord.py extension to make bots appear as if they are on a mobile."
requires-python = ">=3.8, <=3.12"
dependencies = ["discord.py"]
authors = [
    { name = "himangshu", email = "himangshusaikia147@gmail.com" },
    { name = "Yateesh Reddy", email = "reddyyateesh999@gmail.com" },
]
keywords = [
    "discord.py",
    "discord android",
    "discord android status",
    "discord bot mobile status",
    "discord mobile bot status",
]
license = { text = "MIT License" }
urls = { homepage = "https://github.com/0xhimangshu/discord-ext-android" }
